--- a/mapa_teresina/Mapa_Teresina.ipynb
+++ b/mapa_teresina/Mapa_Teresina.ipynb
@@ -10,7 +10,10 @@
     "import numpy as np\n",
     "\n",
     "import folium\n",
-    "from folium import plugins"
+    "from folium import plugins\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -19,11 +22,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mapa = folium.Map(\n",
-    "    width = 800,\n",
-    "    height = 600,\n",
+    "mapa = folium.Map(                          \n",
+    "    width = \"100%\",\n",
+    "    height = \"100%\",\n",
     "    location = [-5.00000, -42.70000],\n",
-    "    zoom_start = 10\n",
+    "    zoom_start = 10,\n",
+    "    control_scale=5\n",
     ")"
    ]
   },
@@ -62,10 +66,10 @@
        "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
        "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
        "            &lt;style&gt;\n",
-       "                #map_091ad3999a595a80dce347d270ef1f64 {\n",
+       "                #map_8e019f53c87c468c16d95a9ac1985c43 {\n",
        "                    position: relative;\n",
-       "                    width: 800.0px;\n",
-       "                    height: 600.0px;\n",
+       "                    width: 100.0%;\n",
+       "                    height: 100.0%;\n",
        "                    left: 0.0%;\n",
        "                    top: 0.0%;\n",
        "                }\n",
@@ -76,14 +80,14 @@
        "&lt;body&gt;\n",
        "    \n",
        "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_091ad3999a595a80dce347d270ef1f64&quot; &gt;&lt;/div&gt;\n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_8e019f53c87c468c16d95a9ac1985c43&quot; &gt;&lt;/div&gt;\n",
        "        \n",
        "&lt;/body&gt;\n",
        "&lt;script&gt;\n",
        "    \n",
        "    \n",
-       "            var map_091ad3999a595a80dce347d270ef1f64 = L.map(\n",
-       "                &quot;map_091ad3999a595a80dce347d270ef1f64&quot;,\n",
+       "            var map_8e019f53c87c468c16d95a9ac1985c43 = L.map(\n",
+       "                &quot;map_8e019f53c87c468c16d95a9ac1985c43&quot;,\n",
        "                {\n",
        "                    center: [-5.0, -42.7],\n",
        "                    crs: L.CRS.EPSG3857,\n",
@@ -92,21 +96,22 @@
        "                    preferCanvas: false,\n",
        "                }\n",
        "            );\n",
+       "            L.control.scale().addTo(map_8e019f53c87c468c16d95a9ac1985c43);\n",
        "\n",
        "            \n",
        "\n",
        "        \n",
        "    \n",
-       "            var tile_layer_66e86d5b7e7942ff2d990e5b3b9361f7 = L.tileLayer(\n",
+       "            var tile_layer_5540886c6857c7adbad9d5526781ccfc = L.tileLayer(\n",
        "                &quot;https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
        "                {&quot;attribution&quot;: &quot;Data by \\u0026copy; \\u003ca target=\\&quot;_blank\\&quot; href=\\&quot;http://openstreetmap.org\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e, under \\u003ca target=\\&quot;_blank\\&quot; href=\\&quot;http://www.openstreetmap.org/copyright\\&quot;\\u003eODbL\\u003c/a\\u003e.&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 18, &quot;maxZoom&quot;: 18, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
-       "            ).addTo(map_091ad3999a595a80dce347d270ef1f64);\n",
+       "            ).addTo(map_8e019f53c87c468c16d95a9ac1985c43);\n",
        "        \n",
        "&lt;/script&gt;\n",
        "&lt;/html&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
       ],
       "text/plain": [
-       "<folium.folium.Map at 0x19b3e6edc60>"
+       "<folium.folium.Map at 0x1d696b5a590>"
       ]
      },
      "execution_count": 4,
@@ -115,16 +120,9 @@
     }
    ],
    "source": [
-    "mapa"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mapa.save(\"covid.html\")"
+    "mapa\n",
+    "\n",
+    "#mapa.save(\"covid.html\")  Caso queira visualizar em .html"
    ]
   }
  ],
